Intro changes, incorporating collaborations into intro.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -47,7 +47,7 @@ The concept of alternate realities has become a mainstay both of science fiction
 	\textit{``Virtual worlds, or as we will now more broadly define them, immersive experiences delivered through the human imagination, have their origins in deep prehistory. Whether these varieties of nonphysical, dreamlike realities were communicated by our ancestors through the imitation of animals, the incarnation of spirits, the painting of scenes on the stone canvasses of caves, the holding of ceremonial rites in temples, or the elaboration of the human story through the fount of theater, humans have craved and crafted virtual-world experiences from the dawn of artistic and linguistic expression.''}~\cite{Damer2014}
 \end{quote}
 
-Within this thesis we are concerned with those alternate realities that through means of computers or other apparatus modify, mediate or create the environmental stimuli received by a subject's senses. While some alternate reality endeavours have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration and odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}, many are focussed upon visual stimuli alone, with other senses suspended or separated, bracketed into a \textit{``different stream of awareness''}~\cite{Adams2014}.
+Within this thesis we are concerned with those alternate realities that through means of computers or other apparatus modify, mediate or create the environmental stimuli received by a subject's senses. While some alternate reality endeavours in this guise have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration and odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}, many are focussed upon visual stimuli alone, with other senses suspended or separated, bracketed into a \textit{``different stream of awareness''}~\cite{Adams2014}.
 
 \begin{quote}
 	\textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
@@ -69,7 +69,7 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 \section{Objectives and Methodology}
 
-The design and development of a new category of alternate reality requires thorough theoretical comprehension and understanding of existing categories of alternate realities. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios upon existing categories of alternate reality, an involved assessment of a new alternate reality requires that it be deployed and not remain contained to thought experiment or theoretical postulation.
+The design and development of a new category of alternate reality requires thorough theoretical comprehension and understanding of existing categories of alternate realities. However to ascertain the worth of a new alternate reality it is all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base an assessment upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality requires that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
 
 \begin{quote}
 	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
@@ -77,17 +77,17 @@ The design and development of a new category of alternate reality requires thoro
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined set of definitions for different categories of existing alternate reality, in order to correctly situate the new paradigm of parallel reality against them and to inform its implementation from the findings and adopted best practices produced by bodies of research into them. This process involved updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the parallel reality paradigm and is covered by chapter \ref{chapter-background}.
+The approach taken by this body of research was first to develop a well defined set of definitions for different categories of existing alternate reality, in order to correctly situate the new paradigm of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by their investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the parallel reality paradigm.
 
-The \textit{worth} of the parallel reality paradigm, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection of empirical evidence.
+The \textit{worth} of the parallel reality paradigm, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
-Initially the Virtual Time Window platform was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience and is discussed in chapter \ref{chapter-vtw}. After the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform was developed in order to fully realise the ideals of the paradigm via a new modality of alternate reality interaction and is covered by chapter \ref{chapter-mirrorshades}.
+Initially the Virtual Time Window platform, discussed in chapter \ref{chapter-vtw}, was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience. After the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform, discussed in chapter \ref{chapter-mirrorshades}, was developed in order to fully realise the ideals of the paradigm via a new modality of alternate reality interaction.
 
 %needs to mention that seated VR is a style of interaction that would be used in the scenario
 %and that parallel reality allows exploration of the same content, for the same goal, but in a different manner
-The measure of success for the Mirrorshades platform as an instantiation of the parallel reality concept was based upon a comparison to a previously explored category of alternate reality, by comparing Mirrorshades against a seated virtual reality experience within a virtual heritage scenario. This evaluation is covered by chapter \ref{chapter-eval-1}.
+The measure of success for the Mirrorshades platform as an instantiation of the parallel reality concept was based upon comparison to a previously established category of alternate reality, by comparing Mirrorshades against a seated virtual reality experience within a virtual heritage scenario. This evaluation is covered by chapter \ref{chapter-eval-1}.
 
-With success of the platform strongly indicated by this first user study, two further user studies were undertaken in order to shed light upon how different aspects of the implementation of a parallel reality platform either negatively or positively affected the user experience. These studies allowed for the construction of a set of best practice recommendations for future parallel reality endeavours and are covered by chapter \ref{chapter-eval-2}.
+With success of the platform strongly indicated by this first user study, two further user studies were undertaken in order to shed light upon how different aspects of the implementation of a parallel reality platform either negatively or positively affected the user experience. These studies, discussed in chapter \ref{chapter-eval-2}, allowed for the construction of a set of best practice recommendations for future parallel reality endeavours.
 
 %=====================
 
@@ -103,9 +103,79 @@ In summary the fundamental research objectives addressed by this thesis were to:
 	%scenario isn't really the word we want - task?
 	\item Identify and put into practice suitable assessment techniques to ascertain the worth of parallel reality in relation to previous alternate reality experience in the same scenario.
 	
-	\item Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects and put these into practice within real world user studies.
+	\item Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
 	
 \end{enumerate}
+
+%=========================================================================================================
+
+\section{Collaborations and Publications}
+\label{collaborations-and-publications}
+While the work presented in this thesis was undertaken principally by myself, it would not have been possible were it not for collaboration. In particular the virtual reconstructions of St Andrews cathedral and St Salvator's chapel, that played a crucial role in both the Virtual Time Window and Mirrorshades projects, were created by the members of the Open Virtual Worlds research group working in collaboration with academics from the university's Art History, History and Archaeology departments, as well as with domain experts from heritage organisations including Historic Scotland and the National Trust for Scotland. Particular recognition should go to Sarah Kennedy for her critical role of modelling the reconstructions, Iain Oliver for his systems administration and for providing a Unity version of the OpenSim chapel reconstruction via a tool of his own authoring, and Richard Fawcett with the School of Art History for his invaluable input to these reconstruction processes. Additionally the Unity model of the Jack Cole department building, that played a crucial role in the development and early testing of the Mirrorshades platform, was created by Alex Field.
+
+%=====================
+
+Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions include:
+
+\begin{itemize}
+
+	%iED Europe
+	\item [1.] Allison, C., Campbell, A., Davies, C., Dow, L., Kennedy, S., Miller, A., Oliver, I. and Perera, I. (2012). Growing the Use of Virtual Worlds in Education: an OpenSim Perspective. Proceedings of the 2nd European Immersive Education Summit.
+	
+	%AINA
+	\item [2.] Oliver, I., Miller, A., Allison, C., Dow, L., Campbell, A., Davies, C., and McCaffery, J. (2013). Towards the 3D Web with Open Simulator. Proceedings of the 27th IEEE International Conference on Advanced Information Networking and Applications.
+
+\end{itemize}
+
+%=====================
+
+In relation to the Virtual Time Window project (see chapter \ref{chapter-vtw}), the following peer reviewed papers were produced:
+
+\begin{itemize}
+
+	%PGNet
+	\item [3.] Davies, C., Miller, A., and Allison, C. (2012). Virtual Time Windows: Applying Cross Reality to Cultural Heritage. Proceedings of the 13th Annual Post Graduate Symposium on the Convergence of Telecommunications, Networking and Broadcasting.
+	
+	%iED Boston
+	\item [4.] Davies, C., Allison, C., and Miller, A. (2013). PolySocial Reality for Education: Addressing the Vacancy Problem with Mobile Cross Reality. Proceedings of the 8th Immersive Education Summit.
+
+	%Digital Heritage Marseille
+	\item [5.] Davies, C., Miller, A., and Allison, C. (2013). Mobile Cross Reality for Cultural Heritage. Proceedings of the 2013 Digital Heritage International Congress (DigitalHeritage) federating the 19th Int'I VSMM, 10th Eurographics GCH, and 2nd UNESCO Memory of the World Conferences, plus special sessions from CAA, Arqueologica 2.0, Space2Place, ICOMOS ICIP and CIPA, EU projects, et al.
+
+\end{itemize}
+
+%=====================
+
+The Cathedral reconstruction that the Virtual Time Window project (see chapter \ref{chapter-vtw}) made use of is covered in greater detail in:
+
+\begin{itemize}
+
+	%iED Europe
+	\item [6.] Kennedy, S., Dow, L., Oliver, I., Sweetman, R., Miller, A., Campbell, A., Davies, C., McCaffery, J., Allison, C., Green, D., Luxford, J. and Fawcett, R. (2012). Living history with Open Virtual Worlds: Reconstructing St Andrews Cathedral as a stage for historic narrative. Proceedings of the 2nd European Immersive Education Summit.
+
+\end{itemize}
+
+%=====================
+
+The design and development of the Mirrorshades platform (see chapter \ref{chapter-mirrorshades}) was presented in a poster, with accompanying abstract:
+
+\begin{itemize}
+	%VRST
+	\item [7.] Davies, C., Miller, A., and Allison, C. (2014). A View from the Hill: Where Cross Reality Meets Virtual Worlds.  Proceedings of the 20th ACM Symposium on Virtual Reality Software and Technology.	
+\end{itemize}
+
+%=====================
+
+Other work from the Open Virtual Worlds group was presented by myself on behalf of the authors:
+
+\begin{itemize}
+	
+	%iED Boston
+	\item [8.] Allison, C., Oliver, I., Miller, A., Davies, C. and McCaffery, J. (2013). From Metaverse to MOOC: Can the Cloud meet Scalability Challenges for Open Virtual Worlds? Proceedings of the 8th Immersive Education Summit.
+	
+\end{itemize}
+
+%=====================
 
 %=========================================================================================================
 
@@ -119,7 +189,7 @@ The contributions of this thesis can be summarized as follows:
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
 	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
@@ -128,6 +198,40 @@ The contributions of this thesis can be summarized as follows:
 \section{Document Overview}
 
 Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different manners of parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
+
+Table \ref{objectives} provides an overview of the sections of the thesis in which each objective is addressed, along with relevant publications from section \ref{collaborations-and-publications}.
+
+\vspace{5mm}
+
+\begin{table}[h]
+\begin{center}
+\begin{minipage}[t]{.6\linewidth}
+\begin{center}
+\begin{tabularx}{\textwidth}{c *{3}{>{\centering\arraybackslash}X}}
+\toprule
+
+\textbf{Objective} & \textbf{Chapter} & \textbf{Related publications} \\
+
+\midrule
+
+1 & \ref{chapter-background} & 3, 4 \& 5 \\
+
+2 & \ref{chapter-background} &  \\
+
+3 & \ref{chapter-vtw} \& \ref{chapter-mirrorshades} & 3, 4, 5 \& 6 \\
+
+4 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \\
+
+5 & \ref{chapter-eval-1} \& \ref{chapter-eval-2} & 7 \\
+
+\bottomrule
+\end{tabularx}
+\caption{Research objectives and corresponding discussion.}
+\label{objectives}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
 
 %=========================================================================================================
 
