--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -39,7 +39,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
 	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
