--- a/thesis.tex
+++ b/thesis.tex
@@ -192,8 +192,8 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter*{Collaborations and Publications}
-\input{collaborations.tex}
+%\chapter*{Collaborations and Publications}
+%\input{collaborations.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
