--- a/hyperlinks.tex
+++ b/hyperlinks.tex
@@ -1,1 +1,1 @@
-Where Web based resources are referenced via footnotes, these resources were checked and were accessible upon the date of this thesis' submission. However due to the nature of such resources their longevity cannot be guaranteed. Such references have only been used where citations to more traditional media were not possible.
+Where Web based resources are referenced via footnotes, these resources were checked and were accessible upon the date of the thesis' submission. However due to the nature of such resources their longevity cannot be guaranteed. Such references have only been used where citations to more traditional media were not possible.
